--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_height="@dimen/normal_icon_size"
         android:layout_toLeftOf="@+id/eraser"
         android:padding="@dimen/medium_margin"
-        android:src="@drawable/ic_redo_big"
+        android:src="@drawable/ic_redo_vector"
         android:visibility="gone"/>
 
     <ImageView
@@ -41,7 +41,7 @@
         android:layout_alignParentRight="true"
         android:layout_below="@id/color_picker"
         android:padding="@dimen/medium_margin"
-        android:src="@drawable/ic_undo_big"
+        android:src="@drawable/ic_undo_vector"
         android:visibility="gone"/>
 
     <ImageView
