Allow quick save with Clear and add Reset button
ref https://github.com/SimpleMobileTools/Simple-Draw/issues/116

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -17,6 +17,11 @@
         android:title="@string/clear"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/reset"
+        android:icon="@drawable/ic_reset"
+        android:title="@string/reset"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/menu_share"
         android:icon="@drawable/ic_share_vector"
         android:title="@string/share"
