--- a/app/src/main/res/layout/dialog_save_image.xml
+++ b/app/src/main/res/layout/dialog_save_image.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/save_image_wrapper"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -11,71 +11,72 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingLeft="@dimen/activity_margin"
-        android:paddingRight="@dimen/activity_margin"
-        android:paddingTop="@dimen/activity_margin">
+        android:paddingTop="@dimen/activity_margin"
+        android:paddingRight="@dimen/activity_margin">
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/save_image_path_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/path"
-            android:textSize="@dimen/smaller_text_size"/>
+            android:textSize="@dimen/smaller_text_size" />
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/save_image_path"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/activity_margin"
-            android:paddingLeft="@dimen/medium_margin"
-            android:paddingRight="@dimen/small_margin"
-            android:paddingTop="@dimen/small_margin"/>
+            android:paddingStart="@dimen/medium_margin"
+            android:paddingTop="@dimen/small_margin"
+            android:paddingEnd="@dimen/small_margin"
+            android:paddingBottom="@dimen/activity_margin" />
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/save_image_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/filename"
-            android:textSize="@dimen/smaller_text_size"/>
+            android:textSize="@dimen/smaller_text_size" />
 
         <com.simplemobiletools.commons.views.MyEditText
             android:id="@+id/save_image_filename"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/small_margin"
             android:layout_marginBottom="@dimen/activity_margin"
-            android:layout_marginLeft="@dimen/small_margin"
             android:singleLine="true"
             android:textCursorDrawable="@null"
-            android:textSize="@dimen/normal_text_size"/>
+            android:textSize="@dimen/normal_text_size" />
 
         <RadioGroup
             android:id="@+id/save_image_radio_group"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:checkedButton="@+id/save_image_radio_png">
+            android:checkedButton="@+id/save_image_radio_png"
+            tools:ignore="HardcodedText">
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
                 android:id="@+id/save_image_radio_png"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/medium_margin"
                 android:paddingTop="@dimen/medium_margin"
-                android:text=".png"/>
+                android:paddingBottom="@dimen/medium_margin"
+                android:text=".png" />
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
                 android:id="@+id/save_image_radio_svg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/medium_margin"
                 android:paddingTop="@dimen/medium_margin"
-                android:text=".svg"/>
+                android:paddingBottom="@dimen/medium_margin"
+                android:text=".svg" />
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
                 android:id="@+id/save_image_radio_jpg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/medium_margin"
                 android:paddingTop="@dimen/medium_margin"
-                android:text=".jpg"/>
+                android:paddingBottom="@dimen/medium_margin"
+                android:text=".jpg" />
 
         </RadioGroup>
     </LinearLayout>
