--- a/app/src/main/res/drawable/circle_background.xml
+++ b/app/src/main/res/drawable/circle_background.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid
-        android:color="@color/color_primary"/>
+    <solid android:color="@color/color_primary" />
 
     <stroke
         android:width="@dimen/preview_dot_stroke_size"
-        android:color="@color/white"/>
+        android:color="@android:color/white" />
 
 </shape>
