--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/fullscreen"
+        android:title=""
+        android:icon="@drawable/ic_fullscreen_white_24dp"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/menu_confirm"
         android:icon="@drawable/ic_check_vector"
         android:title="@string/save"
