--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,22 +5,22 @@
         android:id="@+id/menu_confirm"
         android:icon="@drawable/ic_check_vector"
         android:title="@string/save"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/menu_save"
         android:icon="@drawable/ic_save_vector"
         android:title="@string/save"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/clear"
         android:icon="@drawable/ic_clear"
         android:title="@string/clear"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/menu_share"
         android:icon="@drawable/ic_share_vector"
         android:title="@string/share"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/open_file"
         android:title="@string/open_file"
@@ -32,7 +32,7 @@
     <item
         android:id="@+id/menu_print"
         android:title="@string/print"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
     <item
         android:id="@+id/settings"
         android:title="@string/settings"
