--- a/app/src/main/res/layout/dialog_save_image.xml
+++ b/app/src/main/res/layout/dialog_save_image.xml
@@ -18,6 +18,7 @@
             android:id="@+id/save_image_path_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingStart="@dimen/small_margin"
             android:text="@string/path"
             android:textSize="@dimen/smaller_text_size" />
 
@@ -25,23 +26,15 @@
             android:id="@+id/save_image_path"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="@dimen/medium_margin"
+            android:paddingStart="@dimen/small_margin"
             android:paddingTop="@dimen/small_margin"
             android:paddingEnd="@dimen/small_margin"
             android:paddingBottom="@dimen/activity_margin" />
-
-        <com.simplemobiletools.commons.views.MyTextView
-            android:id="@+id/save_image_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/filename"
-            android:textSize="@dimen/smaller_text_size" />
 
         <com.simplemobiletools.commons.views.MyEditText
             android:id="@+id/save_image_filename"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/small_margin"
             android:layout_marginBottom="@dimen/activity_margin"
             android:singleLine="true"
             android:textCursorDrawable="@null"
