--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,40 +8,40 @@
         android:id="@+id/my_canvas"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/white"/>
+        android:background="@android:color/white" />
 
     <ImageView
         android:id="@+id/redo"
         android:layout_width="@dimen/normal_icon_size"
         android:layout_height="@dimen/normal_icon_size"
-        android:layout_toLeftOf="@+id/eraser"
+        android:layout_toStartOf="@+id/eraser"
         android:padding="@dimen/medium_margin"
         android:src="@drawable/ic_redo_vector"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/eraser"
         android:layout_width="@dimen/normal_icon_size"
         android:layout_height="@dimen/normal_icon_size"
-        android:layout_toLeftOf="@+id/color_picker"
+        android:layout_toStartOf="@+id/color_picker"
         android:padding="@dimen/normal_margin"
-        android:src="@drawable/ic_eraser_off"/>
+        android:src="@drawable/ic_eraser_off" />
 
     <ImageView
         android:id="@+id/color_picker"
         android:layout_width="@dimen/normal_icon_size"
         android:layout_height="@dimen/normal_icon_size"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentEnd="true" />
 
     <ImageView
         android:id="@+id/undo"
         android:layout_width="@dimen/normal_icon_size"
         android:layout_height="@dimen/normal_icon_size"
-        android:layout_alignParentRight="true"
         android:layout_below="@id/color_picker"
+        android:layout_alignParentEnd="true"
         android:padding="@dimen/medium_margin"
         android:src="@drawable/ic_undo_vector"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/stroke_width_preview"
@@ -51,7 +50,7 @@
         android:layout_above="@+id/stroke_width_bar"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/medium_margin"
-        android:background="@drawable/circle_background"/>
+        android:background="@drawable/circle_background" />
 
     <com.simplemobiletools.commons.views.MySeekBar
         android:id="@+id/stroke_width_bar"
@@ -62,6 +61,6 @@
         android:layout_marginBottom="12dp"
         android:max="100"
         android:padding="@dimen/medium_margin"
-        android:progress="50"/>
+        android:progress="50" />
 
 </RelativeLayout>
