--- a/app/src/main/res/drawable/ic_colorize_on_vector.xml
+++ b/app/src/main/res/drawable/ic_colorize_on_vector.xml
@@ -1,3 +1,3 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:viewportWidth="24" android:viewportHeight="24">
-    <path android:fillColor="#FFFFFF" android:pathData="M17.66 5.41l0.92 0.92-2.384 2.447-0.983-0.974L17.66 5.41M17.67 3c-0.26 0-0.51 0.1-0.71 0.29l-3.12 3.12-1.93-1.91-1.41 1.41 1.42 1.42L3 16.25V21h4.75l8.92-8.92 1.42 1.42 1.41-1.41-1.92-1.92 3.12-3.12c0.4-0.4 0.4-1.03 0.01-1.42l-2.34-2.34C18.17 3.1 17.92 3 17.67 3zM6.92 19L5 17.08l8.339-8.348 1.938 1.938z"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M17.67 3c-0.26 0-0.51 0.1-0.71 0.29l-3.12 3.12-1.93-1.91-1.41 1.41 1.42 1.42L3 16.25V21h4.75l8.92-8.92 1.42 1.42 1.41-1.41-1.92-1.92 3.12-3.12c0.4-0.4 0.4-1.03 0.01-1.42l-2.34-2.34C18.17 3.1 17.92 3 17.67 3zM6.92 19L5 17.08l8.339-8.348 1.938 1.938z"/>
 </vector>
