--- a/app/src/prepaid/res/values/bools.xml
+++ b/app/src/prepaid/res/values/bools.xml
@@ -2,4 +2,5 @@
 <resources>
     <bool name="show_donate_in_about">true</bool>
     <bool name="hide_google_relations">true</bool>
+    <bool name="hide_all_external_links">true</bool>
 </resources>
