--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -23,14 +23,17 @@
         app:showAsAction="always" />
     <item
         android:id="@+id/open_file"
+        android:showAsAction="never"
         android:title="@string/open_file"
         app:showAsAction="never" />
     <item
         android:id="@+id/change_background"
+        android:showAsAction="never"
         android:title="@string/change_background_color"
         app:showAsAction="never" />
     <item
         android:id="@+id/menu_print"
+        android:showAsAction="never"
         android:title="@string/print"
         app:showAsAction="never" />
     <item
